# fast-tts

./: .gitignore  BENCHMARK_REPORT.md  BUILD.md  LICENSE  OPTIMIZATION.md  PROJECT_PROGRESS.md  PROJECT_STATUS.md  README.md  benchmark.py  build.sh  final_optimized_tts.py  optimized_tts.py  pyproject.toml  requirements.txt
fast_tts/: __init__.py  benchmark.py  cli.py  core.py
ios/: README.md
ios/SwiftTTS/: AppDelegate.swift  TTSSynthesizer.swift  ViewController.swift
ios/fast-tts-ios/FastTTSTest/: App.swift  ContentView.swift  Persistence.swift  TTSClient.swift
macos/SwiftTTS/: AppDelegate.swift  TTSSynthesizer.swift  ViewController.swift
macos/SwiftTTS/Base.lproj/: Main.storyboard
optimize/: benchmark_v2_optimized.py  benchmark_v3_audio_engine.py  benchmark_v4_concurrent.py  benchmark_v5_native_macos.py  benchmark_v6_pyobjc_fixed.py
python/: convert_yourtts.py  download_voxtral.py
python/backend/: README.md  requirements.txt  server.py
python/backend/models/: README.md
rust/: Cargo.toml  build.rs
rust/src/: lib.rs  voxtral.rs  yourtts.rs
scripts/: benchmark_tts.py  download_models.py  find_models.py  test_apple_tts.py  test_onnx_tts.py
swift/: TTSApp.swift  TTSModule.h  TTSModule.m  TTSOverlay.swift  TTSViewController.swift
swift.xcodeproj/: project.pbxproj
swift/ChunkedTTS/: AppDelegate.swift  ViewController.swift
swift/OptimizedTTS/: AppDelegate.swift  ViewController.swift  main.swift
swift/StreamingTTS/: AppDelegate.swift  ViewController.swift
swift/SwiftTTS/: AppDelegate.swift  ViewController.swift
swift/SwiftTTS.xcodeproj/: project.pbxproj
swift/SwiftTTS/Base.lproj/: Main.storyboard
swift/iOSApp/: ContentView.swift  SwiftTTSApp.swift  TTSWrapper.swift
swifttts.xcodeproj/: project.pbxproj
