[package]
name = "tts-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "tts_engine"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# ONNX/ONNX Runtime
tract_onnx = "0.17"
tract-onnx-runner = "0.17"

# CoreML integration (iOS/macOS native)
coreml-bindings = "0.1"
cocoa = "0.26"
objc = "0.2"

# GGUF support for Llama models (Voxtral)
gguf = "0.2"
llama_cpp_rs = { git = "https://github.com/daniel078/llama-cpp-rs" }

# Audio output
cpal = "0.14"
 rodio = { version = "0.18", default-features = false, features = [" FlacDecoder"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
num-traits = "0.2"
rand = "0.8"
once_cell = "1.19"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"
