[package]
name = "tts-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "tts"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# ONNX Runtime for cross-platform inference
ort = { version = "2.0", features = ["onnxruntime-sys"] }
# CoreML bindings for Apple platforms
coreml-rs = "0.1"
tract-core = "0.21"
tract-onnx = "0.21"

[profile.release]
opt-level = 3
lto = true

[features]
default = []
metal = ["ort/metal"]
